# zero2prod

./: Cargo.toml  README.md  lcov.info
.github/workflows/: general.yml
migrations/: 20241026123950_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriptions.rs  test_helpers.rs
